--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,67 @@
+html,body{
+    display:flex;
+    flex: 1;
+    flex-flow: column nowrap;
+    height:100%;
+    padding: 0;
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+}
 
+.header{
+    flex:1;
+    align-items: center;
+    display: flex;
+    background: #e3e3e3;
+}
+.header:after, .header:before {
+    content: '';
+    display: flex;
+    flex: 1;
+}
+.header-content{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: baseline;
+}
+.content{
+    display: flex;
+    flex:8;
+    flex-flow: row nowrap;
+}
+.left,.right {
+    flex: 1;
+    margin: 2px 0;
+    display: flex;
+}
+
+.left {box-shadow: 1px 0px 1px -2px black;}
+
+.right {
+    box-shadow: -1px 0px 1px -2px black;
+}
+
+.row {
+    display: flex;
+    flex: 1;
+    flex-flow: column nowrap;
+}
+
+.cell {
+    border: 1px solid;
+    display: flex;
+    flex: 1;
+    align-items: center;
+}
+.alphabet{
+    width: 100%;
+    text-align: center;
+}
+.footer{
+    display: flex;
+    flex:1;
+    background-color: #e3e3e3;
+}
+.footer-title{
+    margin: auto;
+}
